@@ -14,6 +14,9 @@ svn trunk
 * Added encoding parameter to htmlfill, which will handle cases when mixed
   str and unicode objects are used (turning all str objects into unicode)
 
+* Be friendlier when loaded from a zip file (as with py2exe);
+  previously only egg zip files would work.
+
 0.7.1
 -----
 
